Adding images uploading service

--- a/.gitignore
+++ b/.gitignore
@@ -517,3 +517,4 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/angular,aspnetcore,visualstudio,visualstudiocode
+/AlDarb/AlDarb.WebApiCore/Resources/Images/*
