--- a/AlDarb/AlDarb.WebApiCore/appsettings.json
+++ b/AlDarb/AlDarb.WebApiCore/appsettings.json
@@ -15,6 +15,7 @@
     "RefreshExpire": "43200‬"
   },
   "ConnectionStrings": {
-    "localDb": "Server=tcp:al-darb-sal.database.windows.net,1433;Initial Catalog=Al-darb;Persist Security Info=False;User ID=aldarbadmin;Password=ilye$23080502;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"localDb": "Server=tcp:al-darb-sal.database.windows.net,1433;Initial Catalog=Al-darb;Persist Security Info=False;User ID=aldarbadmin;Password=ilye$23080502;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "localDb": "Data Source=DESKTOP-MTPGLA4\\SQLEXPRESS; Database=Al-darb; User ID=root;Password=root;"
   }
 }
