--- a/AlDarb/AlDarb.DTO/AlDarb.DTO.csproj
+++ b/AlDarb/AlDarb.DTO/AlDarb.DTO.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AlDarb.Entities\AlDarb.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
