--- a/AlDarb/AlDarb.IdentityManagementCore/AlDarb.IdentityManagementCore.csproj
+++ b/AlDarb/AlDarb.IdentityManagementCore/AlDarb.IdentityManagementCore.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
