--- a/AlDarb/AlDarb.Utils/AlDarb.Utils.csproj
+++ b/AlDarb/AlDarb.Utils/AlDarb.Utils.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
