--- a/AlDarb/AlDarb.WebApiCore/AlDarb.WebApiCore.csproj
+++ b/AlDarb/AlDarb.WebApiCore/AlDarb.WebApiCore.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\maxresdefault.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="csv\" />
     <Folder Include="Properties\" />
     <Folder Include="Resources\Images\" />
     <Folder Include="Setup\" />
@@ -17,8 +22,10 @@
     <ProjectReference Include="..\AlDarb.Services.Infrastructure\AlDarb.Services.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="IronPython" Version="2.7.10" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
       <PrivateAssets>all</PrivateAssets>
@@ -27,6 +34,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.6.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="python" Version="3.8.5" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="3.1.4" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
